# ble_peripheral_rust

./: Cargo.toml  Readme.md
examples/: mac_old.rs  server.rs
src/: error.rs  lib.rs
src/gatt/: characteristic.rs  descriptor.rs  mod.rs  peripheral_event.rs  properties.rs  service.rs
src/macos_old/: main.rs  mod.rs  peripheral_delegate.rs  peripheral_manager.rs
src/peripheral/: mod.rs
src/peripheral/bluez/: characteristic_utils.rs  mod.rs
src/peripheral/corebluetooth/: characteristic_utils.rs  core_bluetooth_event.rs  events.rs  ffi.rs  into_bool.rs  into_cbuuid.rs  mac_extensions.rs  mac_utils.rs  mod.rs  peripheral_delegate.rs  peripheral_manager.rs
src/peripheral/winrt/: error.rs  guid.rs  mod.rs  peripheral_manager.rs
src/response_channel/: mod.rs  response_error.rs
